--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,7 @@
         <link href="assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
     </head>
 
     <body>
@@ -20,12 +21,12 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
-                            <h1 class="display-4">Build stunning websites and apps</h1>
+                            <h1 class="display-4">Explore a different kind of New York!</h1>
                             <p class="lead">
-                                Meet Wingman, a robust suite of styled pages and components, powered by Bootstrap 4. The ideal starting point for product landing pages, stylish web-apps and complete company websites.
+                                Meet MyKindofNY, a curated site of undiscovered parts of New York, powered by real New Yorkers. The ideal starting point for art and deco, stylish designs and galleries.
                             </p>
-                            <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-success">Purchase Now</a>
-                            <a href="pages-landing.html" class="btn btn-lg btn-link text-white">Start exploring <i class="icon-chevron-right"></i></a>
+                            <a href="/signup" class="btn btn-lg btn-success">Join Now</a>
+                            <a href="/login" class="btn btn-lg btn-link text-white">Start exploring <i class="icon-chevron-right"></i></a>
                         </div>
                         <!--end of col-->
                         <div class="col-12 col-md-6">
@@ -33,100 +34,100 @@
 
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
-                                        <a href="landing-1.html">
-                                            <img class="card-img-top" src="assets/img/overview/landing-1-hero.jpg" alt="Landing - One">
+                                        <a href="#">
+                                            <img class="card-img-top" src="assets/img/overview/artdeco.jpg" alt="Landing One" style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="landing-1.html" class="h6 m-0">Landing - One</a>
-                                            <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Art Deco</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="landing-2.html">
-                                            <img class="card-img-top" src="assets/img/overview/landing-2-hero.jpg" alt="Landing - Two">
+                                            <img class="card-img-top" src="assets/img/overview/ArtDecoLobby1.jpg" alt="Landing - Two" style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="landing-2.html" class="h6 m-0">Landing - Two</a>
-                                            <a target="_blank" href="landing-2.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Lobby</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="landing-8.html">
-                                            <img class="card-img-top" src="assets/img/overview/landing-8-hero.jpg" alt="Landing - Eight">
+                                            <img class="card-img-top" src="assets/img/overview/chrys.jpg" alt="Landing - Eight" style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="landing-8.html" class="h6 m-0">Landing - Eight</a>
-                                            <a target="_blank" href="landing-8.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Building</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="landing-9.html">
-                                            <img class="card-img-top" src="assets/img/overview/landing-9-hero.jpg" alt="Landing - Nine">
+                                            <img class="card-img-top" src="assets/img/overview/gthm.jpg" alt="Landing - Nine" style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="landing-9.html" class="h6 m-0">Landing - Nine</a>
-                                            <a target="_blank" href="landing-9.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Gotham</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-collection-list.html">
-                                            <img class="card-img-top" src="assets/img/overview/app-collection-list-hero.jpg" alt="Collection - List">
+                                            <img class="card-img-top" src="assets/img/overview/nyart.jpeg" alt="Collection - List" style="height: 60vh" >
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="app-collection-list.html" class="h6 m-0">Collection - List</a>
-                                            <a target="_blank" href="app-collection-list.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Collection - List</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-docs-landing.html">
-                                            <img class="card-img-top" src="assets/img/overview/app-docs-landing-hero.jpg" alt="Documentation - Landing">
+                                            <img class="card-img-top" src="assets/img/overview/rockcenter1.jpg" alt="Documentation - Landing"  style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="app-docs-landing.html" class="h6 m-0">Documentation - Landing</a>
-                                            <a target="_blank" href="app-docs-landing.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Entry</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-discussion-list.html">
-                                            <img class="card-img-top" src="assets/img/overview/app-discussion-list-hero.jpg" alt="Discussion - List">
+                                            <img class="card-img-top" src="assets/img/overview/nyceagle.jpg" alt="Discussion - List" style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="app-discussion-list.html" class="h6 m-0">Discussion - List</a>
-                                            <a target="_blank" href="app-discussion-list.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Birds</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-profile-social.html">
-                                            <img class="card-img-top" src="assets/img/overview/app-profile-social-hero.jpg" alt="Profile - Social">
+                                            <img class="card-img-top" src="assets/img/overview/Waldorf-Astoria-arX-Solutions-1.jpg" alt="Profile - Social" style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="app-profile-social.html" class="h6 m-0">Profile - Social</a>
-                                            <a target="_blank" href="app-profile-social.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Hotel</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-project-detail.html">
-                                            <img class="card-img-top" src="assets/img/overview/app-project-detail-hero.jpg" alt="Project - Detail">
+                                            <img class="card-img-top" src="assets/img/overview/trojan.jpg" alt="Project - Detail"  style="height: 60vh">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
-                                            <a href="app-project-detail.html" class="h6 m-0">Project - Detail</a>
-                                            <a target="_blank" href="app-project-detail.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                            <a href="#" class="h6 m-0">Trojan</a>
+                                            <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
                                         </div>
                                     </div>
                                 </div>
