--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
         <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  
+        <link href="assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
 
@@ -17,7 +19,8 @@
             <!-- <a class="text-muted" href="#">Sign in</a> -->
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo" href="/index">NYC DESIGN</a>
+          <img alt="logo" src="assets/img/nylogo.jpeg" class="avatar avatar-xs" />
+            <a class="blog-header-logo" href="/index">MyKindOfNY</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
              <div class="col-4 pt-1">
