--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -140,7 +140,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #4582EC;
+  color: rgb(43, 48, 56);
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
