--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -20,7 +20,8 @@
             <a class="text-muted" href="/home">Home</a>
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo" href="/home">Designs by NY</a>
+         <img alt="logo" src="assets/img/nylogo.jpeg" class="avatar avatar-xs" />
+            <a class="blog-header-logo" href="/home">MyKindOfNY</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
         
