fixing login and register forms

--- a/views/index.erb
+++ b/views/index.erb
@@ -35,7 +35,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="#">
-                                            <img class="card-img-top" src="assets/img/overview/artdeco.jpg" alt="Landing One" style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/artdeco.jpg" alt="Landing One" style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Art Deco</a>
@@ -46,7 +46,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="landing-2.html">
-                                            <img class="card-img-top" src="assets/img/overview/ArtDecoLobby1.jpg" alt="Landing - Two" style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/ArtDecoLobby1.jpg" alt="Landing - Two" style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Lobby</a>
@@ -57,7 +57,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="landing-8.html">
-                                            <img class="card-img-top" src="assets/img/overview/chrys.jpg" alt="Landing - Eight" style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/chrys.jpg" alt="Landing - Eight" style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Building</a>
@@ -68,7 +68,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="landing-9.html">
-                                            <img class="card-img-top" src="assets/img/overview/gthm.jpg" alt="Landing - Nine" style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/gthm.jpg" alt="Landing - Nine" style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Gotham</a>
@@ -79,7 +79,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-collection-list.html">
-                                            <img class="card-img-top" src="assets/img/overview/nyart.jpeg" alt="Collection - List" style="height: 60vh" >
+                                            <img class="card-img-top" src="assets/img/overview/nyart.jpeg" alt="Collection - List" style="height: 60vh; border: solid 2px black;" >
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Collection - List</a>
@@ -90,7 +90,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-docs-landing.html">
-                                            <img class="card-img-top" src="assets/img/overview/rockcenter1.jpg" alt="Documentation - Landing"  style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/rockcenter1.jpg" alt="Documentation - Landing"  style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Entry</a>
@@ -101,7 +101,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-discussion-list.html">
-                                            <img class="card-img-top" src="assets/img/overview/nyceagle.jpg" alt="Discussion - List" style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/nyceagle.jpg" alt="Discussion - List" style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Birds</a>
@@ -112,7 +112,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-profile-social.html">
-                                            <img class="card-img-top" src="assets/img/overview/Waldorf-Astoria-arX-Solutions-1.jpg" alt="Profile - Social" style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/Waldorf-Astoria-arX-Solutions-1.jpg" alt="Profile - Social" style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Hotel</a>
@@ -123,7 +123,7 @@
                                 <div class="carousel-cell col-11">
                                     <div class="card card-sm bg-gradient border-0">
                                         <a href="app-project-detail.html">
-                                            <img class="card-img-top" src="assets/img/overview/trojan.jpg" alt="Project - Detail"  style="height: 60vh">
+                                            <img class="card-img-top" src="assets/img/overview/trojan.jpg" alt="Project - Detail"  style="height: 60vh; border: solid 2px black;">
                                         </a>
                                         <div class="card-footer d-flex justify-content-between bg-white">
                                             <a href="#" class="h6 m-0">Trojan</a>
