--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -14,7 +14,7 @@
   <body>
 
 
-      <header class="blog-header py-3">
+      <header class="blog-header py-3" style="padding:20px;">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
             <a class="text-muted" href="/home">Home</a>
