--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,10 +13,10 @@
   <body>
 
     
-      <header class="blog-header py-3">
+      <header class="blog-header py-3" style="padding:20px;">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 pt-1">
-            <!-- <a class="text-muted" href="#">Sign in</a> -->
+            <a class="text-muted" href="/index">Home</a>
           </div>
           <div class="col-4 text-center">
           <img alt="logo" src="assets/img/nylogo.jpeg" class="avatar avatar-xs" />
