--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,23 +1,19 @@
-        <div class="nav-container">
-        </div>
-        <div class="main-container">
-            <section class="space-sm">
-                <div class="container">
-                    <div class="row mb-5">
-                        <div class="col text-center">
-                               
-                            </a>
-                        </div>
-                        <!--end of col-->
-                   </div>
-                    <!--end of row-->
-               
+
+        <style> 
+body{ 
+    background-image: radial-gradient(transparent, rgba(0, 0, 0, 0.7), black), url("/assets/img/cityhall.jpg");
+    background-size: cover;
+    background-size: 100%;
+    background-repeat-x: none;
+    background-repeat-y: none;
+    }
+    </style>       
                   
-                    <div class="row flex-md-row card card-lg">
+                    <div class="row flex-md-row card card-sm">
                         <div class="col-12 col-md-7 card-body bg-secondary">
                             <div class="text-center mb-5">
                                 <h1 class="h2 mb-2">Start creating immediately</h1>
-                                <span>Delight your team and customers with Wingman</span>
+                                <span>and join a company of like-minded people!</span>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-12 col-lg-9">
@@ -32,7 +28,7 @@
                                         </div>
                                          <div class="form-row form-group">
                                             <div class="col">
-         	                            <input type="text" class="form-control-lg" name="username" id="inlineFormInputGroup" placeholder="Username">
+         	                            <input type="text" class="form-control form-control-lg" name="username" id="inlineFormInputGroup" placeholder="Username">
                                             </div>
                                         </div>
                                         <div class="form-row form-group">
@@ -47,10 +43,10 @@
                                                 <small>Password must be at least 7 characters</small>
                                             </div>
                                         </div>
-                                       
+                                      
                                         <div class="form-group col-md-6">
                                             <div class="col">
-                                                <input type="text" class="form-control-lg"  name="birthday" id="inputDate" placeholder="yyyy-mm-dd">
+                                                <input type="text" class="form-control form-control-lg"  name="birthday" id="inputDate" placeholder="yyyy-mm-dd">
                                                  <small>Birthday</small>
                                             </div>
                                         </div>
@@ -118,7 +114,7 @@
                     </div>
                     <!--end of row-->
                     <div class="text-center">
-                        <span class="text-small">Already have an account? <a href="#">Log in here</a>
+                        <span class="text-small" style="color:white;">Already have an account? <a href="#" style="color:white;">Log in here</a>
                         </span>
                     </div>
                 </div>
