--- a/views/signup.erb
+++ b/views/signup.erb
@@ -20,26 +20,26 @@ body{
                                       <form class = "" method="POST" action="/signup">
                                         <div class="form-row form-group">
                                             <div class="col">
-                                                <input type="text" name="first_name" class="form-control form-control-lg" type="text" id="first_name" placeholder="First Name" />
+                                                <input type="text" name="first_name" class="form-control form-control-lg" type="text" id="first_name" placeholder="First Name" required/>
                                             </div>
                                             <div class="col">
-                                                <input type="text" name="last_name" class="form-control form-control-lg" type="text" id="last_name" placeholder="Last Name" />
+                                                <input type="text" name="last_name" class="form-control form-control-lg" type="text" id="last_name" placeholder="Last Name" required/>
                                             </div>
                                         </div>
                                          <div class="form-row form-group">
                                             <div class="col">
-         	                            <input type="text" class="form-control form-control-lg" name="username" id="inlineFormInputGroup" placeholder="Username">
+         	                            <input type="text" class="form-control form-control-lg" name="username" id="inlineFormInputGroup" placeholder="Username" required>
                                             </div>
                                         </div>
                                         <div class="form-row form-group">
                                             <div class="col">
-                                                <input type="email" name="email" class="form-control form-control-lg" type="email" id="inputEmail4" placeholder="Email Address" />
+                                                <input type="email" name="email" class="form-control form-control-lg" type="email" id="inputEmail4" placeholder="Email Address" required/>
                                             </div>
                                         </div>
                         
                                         <div class="form-row form-group">
                                             <div class="col">
-                                                <input type="password" name="password" class="form-control form-control-lg" type="password" id="password" placeholder="Password" />
+                                                <input type="password" name="password" class="form-control form-control-lg" type="password" id="password" placeholder="Password" required/>
                                                 <small>Password must be at least 7 characters</small>
                                             </div>
                                         </div>
