--- a/views/invalid.erb
+++ b/views/invalid.erb
@@ -1,40 +1,37 @@
 
-<section id='invalid'>
-<h1>Invalid Login Info</h1>
-
-<h1>Please try again!</h1>
-</section>
-<div class="nav-container">
-        </div>
+<style> 
+body{ 
+    background-image: radial-gradient(transparent, rgba(0, 0, 0, 0.7), black), url("/assets/img/cityhall.jpg");
+    background-size: cover;
+    background-size: 100%;
+    background-repeat-x: none;
+    background-repeat-y: none;
+    }
+    </style>
         <div class="main-container">
             <section class="space-sm">
                 <div class="container align-self-start">
-                    <div class="row mb-5">
-                        <div class="col text-center">
-                            <a href="#">
-                                <img alt="Image" src="assets/img/logo-gray.svg" />
-                            </a>
-                        </div>
-                        <!--end of col-->
-                    </div>
+                    
                     <!--end of row-->
                     <div class="row justify-content-center">
                         <div class="col-12 col-md-8 col-lg-7">
-                            <div class="card card-lg text-center">
+                            <div class="card card-sm text-center" style="opacity:.9; border-radius: 2.25rem;">
                                 <div class="card-body">
                                     <div class="mb-5">
-                                        <h1 class="h2 mb-2">Hello again</h1>
-                                        <span>Sign in to your account to continue</span>
+                                       
+                                   <h1>Invalid Login Info</h1>
+
+                                   <h1>Please try again!</h1>
                                     </div>
                                     <div class="row no-gutters justify-content-center">
                                         <form class="text-left col-lg-8"  method="POST" action="/login" >
                                             <div class="form-group">
                                                 <label for="login-email">Email Address</label>
-                                                <input class="form-control form-control-lg" type="email" name="email" id="login-email" placeholder="Email Address" />
+                                                <input class="form-control form-control-lg" type="email" name="email" id="login-email" placeholder="Email Address" required/>
                                             </div>
                                             <div class="form-group">
                                                 <label for="login-password">Password</label>
-                                                <input class="form-control form-control-lg" type="password" name="password" id="login-password" placeholder="Enter a password" />
+                                                <input class="form-control form-control-lg" type="password" name="password" id="login-password" placeholder="Enter a password" required/>
                                                 <small>Forgot password? <a href="#">Reset here</a>
                                                 </small>
                                             </div>
@@ -53,7 +50,7 @@
                                 </div>
                             </div>
                             <div class="text-center">
-                                <span class="text-small">Don't have an account yet? <a href="/signup">Create one</a>
+                                <span class="text-small" style="color:white;">Don't have an account yet? <a href="/signup" style="color:white;">Create one</a>
                                 </span>
                             </div>
                         </div>
@@ -65,3 +62,4 @@
             </section>
             <!--end of section-->
         </div>
+
