--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -30,7 +30,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle dropdown-toggle-no-arrow p-lg-0" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <img alt="Image" src="assets/img/avatar-male-3.jpg" class="avatar avatar-xs" />
+                                        <img alt="Image" src="assets/img/me.jpg" class="avatar avatar-xs" />
                                         <span class="badge badge-danger">3</span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right" aria-labelledby="dropdown01">
