--- a/views/login.erb
+++ b/views/login.erb
@@ -24,11 +24,11 @@ body{
                                         <form class="text-left col-lg-8"  method="POST" action="/login" >
                                             <div class="form-group">
                                                 <label for="login-email">Email Address</label>
-                                                <input class="form-control form-control-lg" type="email" name="email" id="login-email" placeholder="Email Address" />
+                                                <input class="form-control form-control-lg" type="email" name="email" id="login-email" placeholder="Email Address" required/>
                                             </div>
                                             <div class="form-group">
                                                 <label for="login-password">Password</label>
-                                                <input class="form-control form-control-lg" type="password" name="password" id="login-password" placeholder="Enter a password" />
+                                                <input class="form-control form-control-lg" type="password" name="password" id="login-password" placeholder="Enter a password" required/>
                                                 <small>Forgot password? <a href="#">Reset here</a>
                                                 </small>
                                             </div>
