--- a/views/admin.erb
+++ b/views/admin.erb
@@ -4,7 +4,7 @@
  <hr/>
 <div class="jumbotron jumbotron-fluid">
   <div class="container profile">
-    <img src="images/zee.jpg" class="rounded float-left zeepic" alt="zeepc">
+    <img src="img/me.jpg" class="rounded float-left zeepic" alt="zeepc">
     <h5>About <%= @user.first_name %></h5>
     <p class="lead"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua.</em></p>
