--- a/views/social.erb
+++ b/views/social.erb
@@ -2,7 +2,7 @@
 <div class="row socialbox">
 <% @users.each do |user| %>
 <div class="card socialcard" style="width: 18rem;">
-  <img class="card-img-top" src="images/pastelsigns.jpg" alt="Card image cap">
+  <img class="card-img-top" src="assets/img/me.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><%= user.first_name %></h5>
     <p class="card-text"><%= user.email %></p>
