--- a/views/index.erb
+++ b/views/index.erb
@@ -144,9 +144,9 @@
                 <div class="container">
                     <div class="row justify-content-center text-center section-intro">
                         <div class="col-12 col-md-9 col-lg-8">
-                            <span class="title-decorative">Meet Wingman</span>
-                            <h2 class="display-4">Attractive from every angle</h2>
-                            <span class="lead">Wingman delivers a seamless user experience, offering visual consistency for your brand, from landing to logged-in</span>
+                            <span class="title-decorative">MyKindOfNY</span>
+                            <h2 class="display-4">New York City is attractive from every angle</h2>
+                            <span class="lead">MyKindOfNY delivers a seamless user experience, offering like-minded people to share ideas.</span>
 
                         </div>
                         <!--end of col-->
@@ -155,29 +155,29 @@
                     <ul class="row feature-list feature-list-sm">
                         <li class="col-12 col-md-4">
                             <a href="pages-landing.html" class="card">
-                                <img alt="Image" src="assets/img/overview/landing-9-hero.jpg" class="img-fluid rounded" />
+                                <img alt="Image" src="assets/img/nycbg.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
-                            <h5>Landing Pages</h5>
+                            <h5>Meeting Events</h5>
                             <p>
-                                Impress potential customers and introduce your product using Wingman’s diverse, purpose-built landing pages
+                                Meet like minded people at private and underground locations!
                             </p>
-                            <a href="pages-landing.html">Explore Landing Pages &rsaquo;</a>
+                            <a href="#">Explore Landing Pages &rsaquo;</a>
                         </li>
                         <!--end of col-->
                         <li class="col-12 col-md-4">
                             <a href="pages-app.html" class="card">
-                                <img alt="Image" src="assets/img/overview/app-profile-social-hero.jpg" class="img-fluid rounded" />
+                                <img alt="Image" src="assets/img/grandart.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
-                            <h5>App Pages</h5>
+                            <h5>Beautiful art around the city.</h5>
                             <p>
-                                A robust suite of styled app pages and flexible Bootstrap-based components makes Wingman ideal for building Apps
+                               You don't have to go to galleries to see fine art.
                             </p>
-                            <a href="pages-app.html">Explore App Pages &rsaquo;</a>
+                            <a href="#">Explore the City &rsaquo;</a>
                         </li>
                         <!--end of col-->
                         <li class="col-12 col-md-4">
-                            <a href="pages-inner.html" class="card">
-                                <img alt="Image" src="assets/img/overview/company-simple-hero.jpg" class="img-fluid rounded" />
+                            <a href="#" class="card">
+                                <img alt="Image" src="assets/img/lobby1.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
                             <h5>Inner Pages</h5>
                             <p>
@@ -192,27 +192,7 @@
                 <!--end of container-->
             </section>
             <!--end of section-->
-            <section class="bg-white">
-                <div class="container">
-                    <div class="row justify-content-around align-items-center">
-                        <div class="col-12 col-md-6 col-lg-5 text-center text-md-left section-intro">
-                            <span class="title-decorative">Designed for Developers</span>
-                            <h3 class="h1">Familiar, modern tooling</h3>
-                            <span class="lead">
-                                Wingman employs industry-standard development tools with an intuitive workflow designed to get you up and runnning faster.
-                            </span>
-                            <a href="#">Explore Documentation &rsaquo;</a>
-                        </div>
-                        <!--end of col-->
-                        <div class="col-8 col-md-6 col-lg-4">
-                            <img alt="Image" src="assets/img/graphic-developer-group.svg" class="img-fluid shadow" />
-                        </div>
-                        <!--end of col-->
-                    </div>
-                    <!--end of row-->
-                </div>
-                <!--end of container-->
-            </section>
+            <
             <!--end of section-->
             <section class="bg-white flush-with-above pb-0">
                 <div class="container">
@@ -246,7 +226,7 @@
                                 <img alt="Image" src="assets/img/avatar-male-3.jpg" class="avatar avatar-lg" />
                                 <div class="media-body">
                                     <p class="h2">
-                                        “With Wingman, we were able to turn out a stunning landing page and compelling MVP for our SaaS App in no time.”
+                                        “With MyKindofNY, I was able to discover parts of New York I never knew existed.”
                                     </p>
                                     <span>Samuel Canning, Movend</span>
                                 </div>
@@ -259,99 +239,7 @@
                 <!--end of container-->
             </section>
             <!--end of section-->
-            <section>
-                <div class="container">
-                    <div class="row justify-content-center text-center section-intro">
-                        <div class="col-12 col-md-9 col-lg-8">
-                            <span class="title-decorative">Flexible &amp; Extensible</span>
-                            <h2 class="display-4">Bootstrap core + much more</h2>
-                            <span class="lead">Wingman features full coverage of Bootstrap's core components plus a suite of additional time-saving features</span>
-
-                        </div>
-                        <!--end of col-->
-                    </div>
-                    <!--end of row-->
-                    <div class="row justify-content-around align-items-center">
-                        <div class="col-12 col-md-6 col-lg-5 order-md-2">
-                            <ul class="nav" id="myTab" role="tablist">
-                                <li>
-                                    <div class="active card" id="tab-1" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
-                                        <div class="card-body">
-                                            <h5>Modular &amp; Multi-Purpose</h5>
-                                            <p>
-                                                Create pages rich in functionality with Wingman's array of modular widgets - carefully designed for a wide range of purposes.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="card" id="tab-2" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
-                                        <div class="card-body">
-                                            <h5>Familiar Markup</h5>
-                                            <p>
-                                                Based on the Bootstrap 4 codebase, Wingman's code is instantly familiar, easy to understand and a dream to extend.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="card" id="tab-3" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
-                                        <div class="card-body">
-                                            <h5>Purposeful Plug-ins</h5>
-                                            <p>
-                                                Elegantly extending Bootstrap's core functionality with Wizards, Touch Sliders, Interface Icons and more.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <!--end of col-->
-                        <div class="col-12 col-md-6 order-md-1">
-                            <div class="tab-content" id="myTabContent">
-                                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="tab-1">
-                                    <img alt="Image" class="img-fluid shadow" src="assets/img/graphic-intro-widgets.png" />
-                                </div>
-                                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="tab-2">
-                                    <img alt="Image" class="img-fluid shadow" src="assets/img/graphic-intro-code.png" />
-                                </div>
-                                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="tab-3">
-                                    <img alt="Image" class="img-fluid shadow" src="assets/img/graphic-intro-plugins.png" />
-                                </div>
-                            </div>
-                        </div>
-                        <!--end of col-->
-                    </div>
-                    <!--end of row-->
-                    <div class="row justify-content-center text-center section-outro">
-                        <div class="col-lg-4 col-md-5">
-                            <h6>Detailed Overview</h6>
-                            <p>Wingman's component index showcases the full breadth of features at a glance</p>
-                            <a href="components-bootstrap.html">Start exploring &rsaquo;</a>
-                        </div>
-                        <!--end of col-->
-                    </div>
-                    <!--end of row-->
-                </div>
-                <!--end of container-->
-            </section>
-            <!--end of section-->
-            <section class="bg-gradient p-0 text-white">
-                <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
-                    <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
-                </svg>
-                <div class="container space-lg">
-                    <div class="row text-center">
-                        <div class="col">
-                            <h3 class="h1">Start building feature-rich websites</h3>
-                            <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-light">Purchase Now</a>
-                        </div>
-                        <!--end of col-->
-                    </div>
-                    <!--end of row-->
-                </div>
-                <!--end of container-->
-            </section>
+           
             <!--end of section-->
             <footer class="bg-gray text-light footer-long">
                 <div class="container">
