--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -34,11 +34,11 @@
                                         <span class="badge badge-danger">3</span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right" aria-labelledby="dropdown01">
-                                        <a class="dropdown-item" href="#">Notifications <span class="badge badge-danger">3</span></a>
+                                        <a class="dropdown-item" href="/notification">Notifications <span class="badge badge-danger">3</span></a>
                                         <a class="dropdown-item" href="/profile">Profile</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="/setting">Settings</a>
-                                        <a class="dropdown-item" href="/post">Post</a>
+                                        <a class="dropdown-item" href="/myblog">Blog</a>
+                                        <a class="dropdown-item" href="/social">Social</a>
                                         <a class="dropdown-item" href="/logout">Log out</a>
                                     </div>
                                 </li>
