ready to present but have to fix bugs

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,11 @@
         <link href="assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
+    <style>
+    .card{
+        height: 60vh;
+    }
+    </style>
     </head>
 
     <body>
@@ -154,7 +159,7 @@
                     <!--end of row-->
                     <ul class="row feature-list feature-list-sm">
                         <li class="col-12 col-md-4">
-                            <a href="pages-landing.html" class="card">
+                            <a href="#" class="card">
                                 <img alt="Image" src="assets/img/nycbg.jpg" class="img-fluid rounded" style="height:60vh;"/>
                             </a>
                             <h5>Meeting Events</h5>
@@ -244,14 +249,7 @@
             <footer class="bg-gray text-light footer-long">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-md-3">
-                            <img alt="Image" src="assets/img/logo-white.svg" class="mb-4" />
-                            <p class="text-muted">
-                                &copy; 2018 Medium Rare
-                                <br />Template available exclusively
-                                <br />at Bootstrap Themes
-                            </p>
-                        </div>
+                       
                         <!--end of col-->
                         <div class="col-12 col-md-9">
                             <span class="h5">A robust suite of styled components for Bootstrap 4</span>
