--- a/blogs.erb
+++ b/blogs.erb
@@ -1,19 +1,20 @@
-
-
 <div class="row user-profile">
   <div class="col s10 offset-s1 m8 offset-m2 l6 offset-l3">
-   <h1><%= @specific_profile.first_name %>'s Blog</h1>
-<% @post = Post.where(user_id: @specific_profile.id)%>
-<% @post.each do |post| %>
+    <h1 class="user-profile-h1"><%= @user.username %></h1>
+
+    <% @user.posts.all.reverse.each do |post| %>
+
 
       <div class="row">
-        <div class="col s12 m7" style="width: 60%;">
+        <div class="col s12 m7" style="width: 100%;">
           <div class="card horizontal card-holder" >
-           
+            <div class="card-image">
+              <img src="<%= post.user.image_url %>" class="responsive-img">
+            </div>
             <div class="card-stacked">
             <div class="card-content">
             <span class="card-title"><%= post.title %></span>
-              <p><%= post.body %></p>
+              <p><%= post.content %></p>
             </div>
             <div class="card-action">
             <a class="username-link" href="/user-profile/<%= post.user.id %>"><%= post.user.username %></a>
