--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,4 @@
 
-
-
         <div class="main-container">
             <section class="bg-dark space-sm">
                 <div class="main-carousel" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":false, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true }'>
@@ -67,6 +65,12 @@
                 </div>
                 <!--end of container-->
             </section>
+
+
+
+
+
+
             <!--end of section-->
             <section class="space-sm flush-with-above">
                 <div class="container">
@@ -89,7 +93,6 @@
                     </div>
                     <!--end of row-->
                     <ul class="row feature-list feature-list-sm">
-
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
@@ -122,7 +125,9 @@
                             </div>
                         </li>
                         <!--end of col-->
-
+                        
+                        
+                        <!--cards-->
                         <li class="col-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <a href="#">
@@ -290,8 +295,25 @@
 
                     </ul>
                     <!--end of row-->
+                <% @post = Post.where(user_id: session[:id])%>
+      <h3>Your Recent Posts</h3>
+      <div class="row myposts">
+  <% @post.reverse.each do |post| %>
+    <div class="card text-center myarticle" style="width: 20rem;">
+      <div class="card-header">Featured</div>
+        <div class="card-body">
+          <h5 class="card-title"><%= post.title %></h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="/myblog/<%= post.id %>" class="btn btn-primary">Continue Reading</a>
+      </div>
+    <div class="card-footer text-muted"><%= post.date %></div>
+</div>
+<% end %>
+</div>
+                
                 </div>
                 <!--end of container-->
+                
             </section>
             <!--end of section-->
             <footer class="footer-short">
@@ -342,5 +364,3 @@
             </footer>
         </div>
 
-
-       
