--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -1,35 +1,81 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
-        <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<!doctype html>
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        <title>Wingman Bootstrap Theme</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="A robust suite of app and landing page templates by Medium Rare">
         <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
         <link href="assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
-  </head>
-  <body>
+    </head>
+
+    <body>
+        <div class="nav-container">
+            <div class="bg-dark navbar-dark" data-sticky="top">
+                <div class="container">
+                    <nav class="navbar navbar-expand-lg">
+                        <a class="navbar-brand" href="/home">
+                         <img alt="logo" src="assets/img/nylogo.jpeg" class="avatar avatar-sm" />
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <i class="icon-menu h4"></i>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a href="index.html" class="nav-link">Overview</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Pages</a>
+                                    <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+
+                                        <a class="dropdown-item" href="pages-landing.html">
+                                            <span class="h6 mb-0">Landing Pages</span>
+                                            <p class="text-small text-muted">Showcase your product in style</p>
+                                        </a>
+
+                                        <div class="dropdown-divider"></div>
 
 
-      <header class="blog-header py-3" style="padding:20px;">
-        <div class="row flex-nowrap justify-content-between align-items-center">
-          <div class="col-4 pt-1">
-            <a class="text-muted" href="/home">Home</a>
-          </div>
-          <div class="col-4 text-center">
-         <img alt="logo" src="assets/img/nylogo.jpeg" class="avatar avatar-xs" />
-            <a class="blog-header-logo" href="/home">MyKindOfNY</a>
-          </div>
-          <div class="col-4 d-flex justify-content-end align-items-center">
-        
-          <div class="btn-group profilebtn">
+                                        <a class="dropdown-item" href="pages-app.html">
+                                            <span class="h6 mb-0">App Pages</span>
+                                            <p class="text-small text-muted">Build detailed, functional web apps</p>
+                                        </a>
+
+                                        <div class="dropdown-divider"></div>
+
+
+                                        <a class="dropdown-item" href="pages-inner.html">
+                                            <span class="h6 mb-0">Inner Pages</span>
+                                            <p class="text-small text-muted">Complete your online presence</p>
+                                        </a>
+
+
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Components</a>
+                                    <div class="dropdown-menu" aria-labelledby="componentsDropdown">
+
+                                        <a class="dropdown-item" href="components-bootstrap.html">Bootstrap</a>
+
+                                        <a class="dropdown-item" href="components-wingman.html">Wingman</a>
+
+                                    </div>
+                                </li>
+                            </ul>
+                            <form class="form-inline col p-0 pl-md-2 pr-md-3">
+                                <input class="form-control w-100" type="search" placeholder="Search" aria-label="Search">
+                            </form>
+
+                          <div class="btn-group profilebtn">
             
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle dropdown-toggle-no-arrow p-lg-0" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle dropdown-toggle-no-arrow p-lg-0" href="/profile" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <img alt="Image" src="assets/img/me.jpg" class="avatar avatar-xs" />
                                         <span class="badge badge-danger">3</span>
                                     </a>
@@ -44,29 +90,34 @@
                                 </li>
                             </ul>
           </div>
-            <div class="entrybtn">
+ <div class="entrybtn">
             <a class="btn btn-sm btn-outline-secondary" href="/new">New Entry</a>
           </div>
-            <!-- <a class="btn btn-sm btn-outline-secondary" href="/index">Log out</a> -->
-          </div>
+
+                        </div>
+                        <!--end nav collapse-->
+                    </nav>
+                </div>
+                <!--end of container-->
+            </div>
         </div>
-      </header>
  
    <%= yield %> 
+   
    <script src="main.js"></script>
    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-  <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/js/popper.min.js"></script>
-        <script type="text/javascript" src="assets/js/jquery.smartWizard.min.js"></script>
-        <script type="text/javascript" src="assets/js/flickity.pkgd.min.js"></script>
-        <script type="text/javascript" src="assets/js/scrollMonitor.js"></script>
-        <script type="text/javascript" src="assets/js/smooth-scroll.polyfills.js"></script>
-        <script type="text/javascript" src="assets/js/prism.js"></script>
-        <script type="text/javascript" src="assets/js/zoom.min.js"></script>
-        <script type="text/javascript" src="assets/js/bootstrap.js"></script>
-        <script type="text/javascript" src="assets/js/theme.js"></script>
+        <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/assets/js/popper.min.js"></script>
+        <script type="text/javascript" src="/assets/js/jquery.smartWizard.min.js"></script>
+        <script type="text/javascript" src="/assets/js/flickity.pkgd.min.js"></script>
+        <script type="text/javascript" src="/assets/js/scrollMonitor.js"></script>
+        <script type="text/javascript" src="/assets/js/smooth-scroll.polyfills.js"></script>
+        <script type="text/javascript" src="/assets/js/prism.js"></script>
+        <script type="text/javascript" src="/assets/js/zoom.min.js"></script>
+        <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
+        <script type="text/javascript" src="/assets/js/theme.js"></script>
   </body>
 </html>
  
