--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,10 @@
 
+<style>
+.img-fluid {
+    max-width: 100%;
+    height: 40vh;
+}
+</style>
         <div class="main-container">
             <section class="bg-dark space-sm">
                 <div class="main-carousel" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":false, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true }'>
@@ -6,27 +12,27 @@
 
                     <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
                         <a href="#" class="d-block mb-3">
-                            <img alt="Image" src="assets/img/graphic-product-bench.jpg" class="img-fluid rounded" />
+                            <img alt="Image" src="assets/img/bkb.jpg" class="img-fluid rounded" />
                         </a>
-                        <span class="h6">Bench - Accounting for creative people</span>
+                        <span class="h6">Landmarks - Rediscover landmarks</span>
                     </div>
 
 
 
                     <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
                         <a href="#" class="d-block mb-3">
-                            <img alt="Image" src="assets/img/graphic-product-kin.jpg" class="img-fluid rounded" />
+                            <img alt="Image" src="assets/img/banksy.jpg" class="img-fluid rounded" />
                         </a>
-                        <span class="h6">Kin - The digital fashion assistant</span>
+                        <span class="h6">Art - Banksy</span>
                     </div>
 
 
 
                     <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
                         <a href="#" class="d-block mb-3">
-                            <img alt="Image" src="assets/img/graphic-product-paydar.jpg" class="img-fluid rounded" />
+                            <img alt="Image" src="assets/img/mill.png" class="img-fluid rounded" />
                         </a>
-                        <span class="h6">Paydar - Location based touch payments</span>
+                        <span class="h6">Real Estate - Brooklyn Paradise</span>
                     </div>
 
 
@@ -35,9 +41,9 @@
 
                     <div class="carousel-cell col-9 col-md-8 col-lg-5 text-center">
                         <a href="#" class="d-block mb-3">
-                            <img alt="Image" src="assets/img/graphic-product-pitstop.jpg" class="img-fluid rounded" />
+                            <img alt="Image" src="assets/img/pershing-square.jpg" class="img-fluid rounded" />
                         </a>
-                        <span class="h6">Pitstop - Browser-based project management</span>
+                        <span class="h6">Secret Spots - Discover locations</span>
                     </div>
 
 
@@ -50,12 +56,12 @@
                     <div class="row">
                         <div class="col text-center">
                             <div class="mb-3">
-                                <a href="#" class="btn btn-secondary mb-1">Technology</a>
+                                <a href="#" class="btn btn-secondary mb-1">Art</a>
                                 <a href="#" class="btn btn-secondary mb-1">Lifestyle</a>
-                                <a href="#" class="btn btn-secondary mb-1">Marketing</a>
-                                <a href="#" class="btn btn-secondary mb-1">Health &amp; Fitness</a>
-                                <a href="#" class="btn btn-secondary mb-1">Music</a>
-                                <a href="#" class="btn btn-secondary mb-1">Productivity</a>
+                                <a href="#" class="btn btn-secondary mb-1">Food</a>
+                                <a href="#" class="btn btn-secondary mb-1">Real Estate &amp; Landmarks</a>
+                                <a href="#" class="btn btn-secondary mb-1">Architect</a>
+                                <a href="#" class="btn btn-secondary mb-1">Galleries</a>
                             </div>
                             <a href="#" class="text-small">Explore all categories &rsaquo;</a>
                         </div>
