--- a/views/layout_loggedin.erb
+++ b/views/layout_loggedin.erb
@@ -26,38 +26,38 @@
                         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a href="index.html" class="nav-link">Overview</a>
+                                    <a href="/feed" class="nav-link">Feed</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Pages</a>
+                                    <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Events</a>
                                     <div class="dropdown-menu" aria-labelledby="pagesDropdown">
 
                                         <a class="dropdown-item" href="pages-landing.html">
-                                            <span class="h6 mb-0">Landing Pages</span>
-                                            <p class="text-small text-muted">Showcase your product in style</p>
+                                            <span class="h6 mb-0">Private Events</span>
+                                            <p class="text-small text-muted">Meet like-minded people</p>
                                         </a>
 
                                         <div class="dropdown-divider"></div>
 
 
                                         <a class="dropdown-item" href="pages-app.html">
-                                            <span class="h6 mb-0">App Pages</span>
-                                            <p class="text-small text-muted">Build detailed, functional web apps</p>
+                                            <span class="h6 mb-0">Local Events</span>
+                                            <p class="text-small text-muted">Find local events</p>
                                         </a>
 
                                         <div class="dropdown-divider"></div>
 
 
                                         <a class="dropdown-item" href="pages-inner.html">
-                                            <span class="h6 mb-0">Inner Pages</span>
-                                            <p class="text-small text-muted">Complete your online presence</p>
+                                            <span class="h6 mb-0">Art showss</span>
+                                            <p class="text-small text-muted">Discover Galleries</p>
                                         </a>
 
 
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Components</a>
+                                    <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Categories</a>
                                     <div class="dropdown-menu" aria-labelledby="componentsDropdown">
 
                                         <a class="dropdown-item" href="components-bootstrap.html">Bootstrap</a>
