--- a/views/layout_profile.erb
+++ b/views/layout_profile.erb
@@ -30,14 +30,15 @@
             <a class="text-muted" href="/home">Home</a>
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo" href="/home">thePolyglot</a>
+            <a class="blog-header-logo" href="/home">MyKindOfNY</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
         
           <div class="btn-group profilebtn">
             <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Me</button>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="/admin">Profile</a>
+             <a class="dropdown-item" href="/home">Home</a>
+              <a class="dropdown-item" href="/profile">Profile</a>
               <a class="dropdown-item" href="/myblog">Blog</a>
               <a class="dropdown-item" href="/social">Social</a>
               <div class="dropdown-divider"></div>
