--- a/views/profileblog.erb
+++ b/views/profileblog.erb
@@ -1,27 +1,237 @@
 
+        <meta charset="utf-8">
+        <title>Wingman Bootstrap Theme</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="A robust suite of app and landing page templates by Medium Rare">
+        <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
+        <link href="../assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="../assets/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="../assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
+   
 
-<div class="row user-profile">
-  <div class="col s10 offset-s1 m8 offset-m2 l6 offset-l3">
-   <h1><%= @specific_profile.first_name %>'s Blog</h1>
-<% @post = Post.where(user_id: @specific_profile.id)%>
-<% @post.each do |post| %>
+   
 
-      <div class="row">
-        <div class="col s12 m7" style="width: 60%;">
-          <div class="card horizontal card-holder" >
-           
-            <div class="card-stacked">
-            <div class="card-content">
-            <span class="card-title"><%= post.title %></span>
-              <p><%= post.body %></p>
-            </div>
-            <div class="card-action">
-            <a class="username-link" href="/user-profile/<%= post.user.id %>"><%= post.user.username %></a>
-            </div>
-            </div>
-          </div>
+       
+        <div class="main-container">
+            <section class="space-sm">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-4 mb-4 mb-md-0">
+                            <div class="card card-profile-large text-center">
+                                <div class="card-header">
+                                    <img alt="Image" src="../assets/img/photo-beach.jpg" class="bg-image" />
+                                </div>
+                                <div class="card-body">
+                                    <a href="#">
+                                        <img alt="Aaron Cunningham" src="../assets/img/michael.jpg" class="avatar avatar-lg" />
+                                    </a>
+                                    <div class="my-3">
+                                        <div class="mb-2">
+                                            <h5 class="mb-0">Aaron Cunningham</h5>
+                                            <span class="text-muted">Front-End Product Engineer</span>
+                                        </div>
+                                        <span class="text-small text-muted"><i class="icon-location"></i> Melbourne, AU</span>
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-outline-primary"><i class="icon-add-user"></i> Follow</button>
+                                        <button class="btn btn-outline-primary"><i class="icon-mail"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end card -->
+                            <div class="card">
+                                <div class="card-header d-flex justify-content-between">
+                                    <div>
+                                        <span class="h6">Followers</span>
+                                    </div>
+                                    <a href="#">View all &rsaquo;</a>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-unstyled list-spacing-sm">
+
+                                        <li>
+                                            <a class="media" href="#">
+                                                <img alt="Image" src="../assets/img/avatar-male-1.jpg" class="avatar avatar-sm mr-3" />
+                                                <div class="media-body">
+                                                    <span class="h6 mb-0">Daniel Cameron</span>
+                                                    <span class="text-muted">Product Designer</span>
+                                                </div>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="media" href="#">
+                                                <img alt="Image" src="../assets/img/avatar-female-1.jpg" class="avatar avatar-sm mr-3" />
+                                                <div class="media-body">
+                                                    <span class="h6 mb-0">Caitlyn Halsy</span>
+                                                    <span class="text-muted">Marketing Professional</span>
+                                                </div>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="media" href="#">
+                                                <img alt="Image" src="../assets/img/avatar-male-2.jpg" class="avatar avatar-sm mr-3" />
+                                                <div class="media-body">
+                                                    <span class="h6 mb-0">Toby Marsh</span>
+                                                    <span class="text-muted">Developer</span>
+                                                </div>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="media" href="#">
+                                                <img alt="Image" src="../assets/img/avatar-female-2.jpg" class="avatar avatar-sm mr-3" />
+                                                <div class="media-body">
+                                                    <span class="h6 mb-0">Lucille Freebody</span>
+                                                    <span class="text-muted">Graphic Designer</span>
+                                                </div>
+                                            </a>
+                                        </li>
+
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- end card -->
+                            <div class="card">
+                                <div class="card-header d-flex justify-content-between">
+                                    <div>
+                                        <span class="h6">Recent photos</span>
+                                    </div>
+                                    <a href="#">View all &rsaquo;</a>
+                                </div>
+                                <div class="card-body">
+                                    <div class="image-gallery">
+                                        <img alt="Image" src="../assets/img/photo-man-laptop.jpg" data-action="zoom" data-width="800" data-height="600" />
+                                        <img alt="Image" src="../assets/img/photo-man-meeting.jpg" data-action="zoom" />
+                                        <img alt="Image" src="../assets/img/photo-woman-cafe.jpg" data-action="zoom" />
+                                    </div>
+                                </div>
+                            </div>
+                            <!--end of card-->
+                            <div class="card card-borderless bg-secondary">
+                                <a class="card-body" href="#">
+                                    <div class="d-flex justify-content-between mb-3">
+                                        <img alt="Image" src="assets/img/logo-w-gradient.svg" />
+                                        <span class="title-decorative">Sponsor</span>
+                                    </div>
+                                    <span class="h6">A robust suite of styled elements and pages</span>
+                                </a>
+                            </div>
+                            <!-- end card -->
+                        </div>
+                        <!--end of col-->
+                        <div class="col-12 col-md-8">
+						  <h1><%= @specific_profile.first_name %>'s Blog</h1>
+                        <% @post = Post.where(user_id: @specific_profile.id)%>
+                          <% @post.each do |post| %>
+
+                            <div class="card">
+                                <div class="card-header card-header-borderless d-flex justify-content-between">
+                                    <small class="text-muted"><i class="icon-add-to-list mr-1"></i> Added a new item</small>
+                                    <small class="text-muted">A few moments ago</small>
+                                </div>
+                                <div class="card-content">
+                               <span class="card-title"><%= post.title %></span>
+                                <p><%= post.body %></p>
+                                </div>
+                             <div class="card-action">
+                             <a class="username-link" href="/user-profile/<%= post.user.id %>"><%= post.user.username %></a>
+                              </div>
+                                <div class="card-footer d-flex justify-content-between">
+                                    <div>
+                                        <button class="btn btn-sm btn-outline-secondary">Comment</button>
+                                        <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>
+                                        </button>
+                                    </div>
+                                    <div class="text-small">
+                                        <ul class="list-inline">
+                                            <li class="list-inline-item"><i class="icon-thumbs-up"></i> 12</li>
+                                            <li class="list-inline-item"><i class="icon-share-alternative"></i> 8</li>
+                                        </ul>
+                                    </div>
+                                </div>
+								
+                            </div>
+							 <% end %>
+                            <!--end of card-->
+                           
+                            <div class="text-center mt-5">
+                                <button class="btn btn-outline-secondary">Show more</button>
+                            </div>
+                        </div>
+                        <!--end of col-->
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </section>
+            <footer class="footer-short">
+                <div class="container">
+                    <hr>
+                    <nav class="row justify-content-between align-items-center">
+                        <div class="col-auto">
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <img alt="Image" src="../assets/img/logo-gray.svg" />
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">Overview</a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">Documentation</a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">Changelog</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!--end of col-->
+                        <div class="col-auto text-sm-right">
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="#"><i class="socicon-twitter"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#"><i class="socicon-facebook"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!--end of col-->
+                    </nav>
+                    <!--end of row-->
+                    <div class="row">
+                        <div class="col">
+                            <small>&copy; 2018 MyKindOfNY  All Rights Reserved</small>
+                        </div>
+                        <!--end of col-->
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </footer>
         </div>
-      </div>
-    <% end %>
-  </div>
-</div>
+
+
+        <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+        <script type="text/javascript" src="assets/js/popper.min.js"></script>
+        <script type="text/javascript" src="assets/js/jquery.smartWizard.min.js"></script>
+        <script type="text/javascript" src="assets/js/flickity.pkgd.min.js"></script>
+        <script type="text/javascript" src="assets/js/scrollMonitor.js"></script>
+        <script type="text/javascript" src="assets/js/smooth-scroll.polyfills.js"></script>
+        <script type="text/javascript" src="assets/js/prism.js"></script>
+        <script type="text/javascript" src="assets/js/zoom.min.js"></script>
+        <script type="text/javascript" src="assets/js/bootstrap.js"></script>
+        <script type="text/javascript" src="assets/js/theme.js"></script>
+
+ 
+
+
+
+
+
+
+
